css/style.css
@font-face {
  font-family: 'FZYanSongM';
  src: url('../fonts/FZYanSongM.ttf');
  src:
    url('../fonts/FZYanSongM.eot?#font-spider') format('embedded-opentype'),
    url('../fonts/FZYanSongM.woff2') format('woff2'),
    url('../fonts/FZYanSongM.woff') format('woff'),
    url('../fonts/FZYanSongM.ttf') format('truetype'),
    url('../fonts/FZYanSongM.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

html, body {
  margin: 0;
  height: 100%;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: white;
  font-family: 'FZYanSongM';
}

.left {
  width: 407px;
  height: 585px;
  color: #fff;
  background-color: #16334b;
}

.right > img {
  display: block;
}

.left + .right {
  padding-left: 10px;
}

.box {
  margin: 17px;
  border: 4px solid #fff;
  border-radius: 1px;
}

.box-header {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border-bottom: 4px solid #fff;
  padding: 8px 0;
  font-size: 0;
}

.box-header > span {
  width: 60px;
  height: 60px;
  font-size: 36px;
  text-align: center;
  line-height: 54px;
  box-sizing: border-box;
  border: 3px solid #16334b;
  box-shadow: 0 0 0 4px #fff;
  border-radius: 50%;
  color: #16334b;
  background-color: #fff;
}

.box-header > span + span {
  margin-left: 31px;
}

.box-content {
  display: flex;
  align-items: stretch;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.box-content > div {
  writing-mode: vertical-lr;
  -webkit-writing-mode: vertical-lr;
}

.box-content > div + div {
  border-left: 4px solid #fff;
}

.box-content-center {
  width: 183px;
  line-height: 183px;
  box-sizing: border-box;
  padding-top: 22px;
  padding-bottom: 22px;
  font-size: 76px;
  letter-spacing: 3px;
}

.box-content-left,
.box-content-right {
  width: 91px;
  line-height: 91px;
  box-sizing: border-box;
  padding-top: 29px;
  font-size: 36px;
  letter-spacing: 2px;
}

.box-footer {
  border-top: 4px solid #fff;
  text-align: center;
  font-size: 46px;
  line-height: 67px;
  letter-spacing: 18px;
  text-indent: 18px;
}

